--- a/SistemaCalificacion.Application/SistemaCalificacion.Application.csproj
+++ b/SistemaCalificacion.Application/SistemaCalificacion.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SistemaCalificacion.Domain\SistemaCalificacion.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
