--- a/SistemaCalificacion.Presentation/SistemaCalificacion.Presentation.csproj
+++ b/SistemaCalificacion.Presentation/SistemaCalificacion.Presentation.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SistemaCalificacion.Application\SistemaCalificacion.Application.csproj" />
+    <ProjectReference Include="..\SistemaCalificacion.Infrastructure\SistemaCalificacion.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
