Folders a utillizar en cada layer para agregar las interfaces , entidades, clases , ect..

--- a/SistemaCalificacion.Infrastructure/SistemaCalificacion.Infrastructure.csproj
+++ b/SistemaCalificacion.Infrastructure/SistemaCalificacion.Infrastructure.csproj
@@ -10,4 +10,9 @@
     <ProjectReference Include="..\SistemaCalificacion.Domain\SistemaCalificacion.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\" />
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
 </Project>
