--- a/SistemaCalificacion.Application/SistemaCalificacion.Application.csproj
+++ b/SistemaCalificacion.Application/SistemaCalificacion.Application.csproj
@@ -10,4 +10,9 @@
     <ProjectReference Include="..\SistemaCalificacion.Domain\SistemaCalificacion.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
