--- a/SistemaCalificacion.Infrastructure/SistemaCalificacion.Infrastructure.csproj
+++ b/SistemaCalificacion.Infrastructure/SistemaCalificacion.Infrastructure.csproj
@@ -7,12 +7,21 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SistemaCalificacion.Domain\SistemaCalificacion.Domain.csproj" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.9">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.9">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Data\" />
-    <Folder Include="Repositories\" />
+    <ProjectReference Include="..\SistemaCalificacion.Application\SistemaCalificacion.Application.csproj" />
+    <ProjectReference Include="..\SistemaCalificacion.Domain\SistemaCalificacion.Domain.csproj" />
   </ItemGroup>
 
 </Project>
