--- a/SistemaCalificacion.Presentation/SistemaCalificacion.Presentation.csproj
+++ b/SistemaCalificacion.Presentation/SistemaCalificacion.Presentation.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.9">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.9" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SistemaCalificacion.Application\SistemaCalificacion.Application.csproj" />
     <ProjectReference Include="..\SistemaCalificacion.Infrastructure\SistemaCalificacion.Infrastructure.csproj" />
   </ItemGroup>
