--- a/SistemaCalificacion.Presentation/appsettings.json
+++ b/SistemaCalificacion.Presentation/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=DBSistemaCalificacion;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=DBSistemaCalificacion;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
